feat: realization of picture-explore section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Forum&family=Roboto:wght@100;300;400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/main/virtual-tour.css" />
+    <link rel="stylesheet" href="css/main/picture-explore.css" />
     <title>Museum</title>
   </head>
   <body>
@@ -136,9 +136,22 @@
             </div>
           </a>
         </div>
+        <!-- Сделать реализацию iframe для ссылок -->
       </section>
-      <section class="explore container dark">
-        <h2>Picture explore</h2>
+      <section class="explore dark">
+        <div class="explore-cont container">
+          <div class="explore-info">
+            <h2>Picture explore</h2>
+            <p>Las Meninas is a 1656 painting by Diego Velázquez, the leading artist of the Spanish Golden Age.</p>
+            <p>It was cleaned in 1984 to remove a <span>"yellow veil"</span> of dust that had gathered since the previous restoration in the 19th century.</p>
+            <p>The cleaning provoked furious protests, not because the picture had been damaged in any way, but because it looked different.</p>
+          </div>
+          <div class="explore-picture">
+            <img src="assets/img/explore-slider/before.jpg" alt="explore-before">
+            <!-- <img src="assets/img/explore-slider/after.jpg" alt="explore-after"> -->
+            <!-- Сделать слайдер до/после для картинок -->
+          </div>
+        </div>
       </section>
       <section class="video container">
         <h2>Video journey</h2>
