feat: start to do video section. Add video from youtube & videoplayer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Forum&family=Roboto:wght@100;300;400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/main/picture-explore.css" />
+    <link rel="stylesheet" href="css/main/video-journey.css" />
     <title>Museum</title>
   </head>
   <body>
@@ -154,7 +154,29 @@
         </div>
       </section>
       <section class="video container">
-        <h2>Video journey</h2>
+        <div class="video-info">
+          <h2>Video journey</h2>
+          <h3>Enter and visit one of the most famous museums in the world and enjoy masterpieces such as Mona Lisa or Hammurabi's Code</h3>
+        </div>
+        <div class="video-player">
+          <video poster="assets/video/poster0.jpg" controls>
+            <source src="">
+          </video>
+          <div class="video-slider">
+            <iframe width="1904" height="768" src="https://www.youtube.com/embed/zp1BXPX8jcU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="1904" height="768" src="https://www.youtube.com/embed/Vi5D6FKhRmo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="1904" height="768" src="https://www.youtube.com/embed/NOhDysLnTvY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+          <div class="video-slidebar">
+            <img src="" alt="" class="video-line">
+            <div class="oneslide"></div>
+            <div class="oneslide"></div>
+            <div class="oneslide"></div>
+            <div class="oneslide"></div>
+            <div class="oneslide"></div>
+            <img src="" alt="" class="video-line">
+          </div>
+        </div>
       </section>
       <section class="gallery container dark">
         <h2>Art Gallery</h2>
