feat: finish video journey task & add video

--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
             <iframe width="1904" height="768" src="https://www.youtube.com/embed/NOhDysLnTvY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <div class="video-slidebar">
-            <img src="" alt="" class="video-line">
+            <div class="video-line"></div>
+            <div class="oneslide" style="background-color: #333;"></div>
             <div class="oneslide"></div>
             <div class="oneslide"></div>
             <div class="oneslide"></div>
             <div class="oneslide"></div>
-            <div class="oneslide"></div>
-            <img src="" alt="" class="video-line">
+            <div class="video-line video-line_right"></div>
           </div>
         </div>
       </section>
