feat: fulfilled gallery section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Forum&family=Roboto:wght@100;300;400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/main/video-journey.css" />
+    <link rel="stylesheet" href="css/main/art-gallsery.css" />
     <title>Museum</title>
   </head>
   <body>
@@ -178,8 +178,25 @@
           </div>
         </div>
       </section>
-      <section class="gallery container dark">
-        <h2>Art Gallery</h2>
+      <section class="gallery dark">
+        <div class="galery-cont container">
+          <h2>Art Gallery</h2>
+          <div class="galery-grid">
+            <img src="assets/img/galery/galery2.jpg" alt="pic1" class="galery-picture" id="galery-pic1">
+            <img src="assets/img/galery/galery1.jpg" alt="pic2" class="galery-picture" id="galery-pic2">
+            <img src="assets/img/galery/galery7.jpg" alt="pic3" class="galery-picture" id="galery-pic3">
+            <img src="assets/img/galery/galery9.jpg" alt="pic4" class="galery-picture" id="galery-pic4">
+            <img src="assets/img/galery/galery8.jpg" alt="pic5" class="galery-picture" id="galery-pic5">
+            <img src="assets/img/galery/galery10.jpg" alt="pic6" class="galery-picture" id="galery-pic6">
+            <img src="assets/img/galery/galery4.jpg" alt="pic7" class="galery-picture" id="galery-pic7">
+            <img src="assets/img/galery/galery3.jpg" alt="pic8" class="galery-picture" id="galery-pic8">
+            <img src="assets/img/galery/galery15.jpg" alt="pic9" class="galery-picture" id="galery-pic9">
+            <img src="assets/img/galery/galery6.jpg" alt="pic10" class="galery-picture" id="galery-pic10">
+            <img src="assets/img/galery/galery5.jpg" alt="pic11" class="galery-picture" id="galery-pic11">
+            <img src="assets/img/galery/galery12.jpg" alt="pic12" class="galery-picture" id="galery-pic12">
+          </div>
+          <div class="galery-shadow"></div>
+        </div>
       </section>
       <section class="tickets container">
         <h2>BUY TICKETS</h2>
